# ViT_cpp

./: CMakeLists.txt  Config.h.in  README.md  download_dataset.py  env.sh  main.cpp  setup.sh  vit.cpp
Classes/: CMakeLists.txt  Classes.cpp
lib/: CMakeLists.txt
lib/loaders/: CMakeLists.txt  dataloaders.cpp  dataloaders.h
lib/tqdm/: CMakeLists.txt
lib/vit_pytorch_cpp/: CMakeLists.txt  vit.cpp  vit.h
vit_pytorch_cpp/: vit.cpp  vit.h
